--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,7 @@ a {
    background: #ece8e8;
    margin-top: 5vmax;
    padding: 2vw 4vw;
+   width: 100%;
 }
 #our-cabs h2 {
     font-size: 2vmax;
@@ -355,13 +356,18 @@ a {
 
 
 /*  --- SLIDER  */
+#slider {
+    width: 100%;
+
+}
 .slide-container {
     padding: 2vmax 3vmax;
     background: #ffffff;
-    position: relative;
+    /* position: relative; */
 }
 .slide-container img {
     width: 100%;
+    height: auto;
     object-position: center;
     object-fit: cover;
 }
@@ -625,7 +631,7 @@ a {
                 font-family: txt-R;
                 margin-bottom: 1vmax ;
             }
-
+/* 
             .bottom a {
                 width: 100%;
                 padding: 1vw 0;
@@ -633,28 +639,28 @@ a {
             }
             #btn-box a {
                 padding: 2vw 2.5vw;
-                font-size: 2vmax;
-            }
+                font-size: 1.90vmax;
+            } */
              
-            .service-box {
-                padding: 2.5vmax 0 0 2.5vmax;
+            /* .service-box {
+                padding: 1vmax 0 3vw 1.5vmax;
             }
             .service-box .details h3 {
-                font-size: 3vw;
+                font-size: 4.25vw;
             }
             .service-box .details p {
-                font-size: 2.40vw;
+                font-size: 1.20vmax;
                 font-family: txt-R;
-                margin: 2vmax 2vmax;
-            }
+                margin: 1.85vmax 0;
+            } */
 
-            .service-box .details a {
+            /* .service-box .details a {
                 padding: 2vw 4vw;
                 border-radius: 20px;
                 font-family: txt-B;
-                font-size: 1.5vmax;
+                font-size: 1.2vmax;
                 color: #000;
-            }
+            } */
             #testimonials h2 {
                 font-size: 3vmax;
                 margin-left: 2vmax;
