--- a/css/style.css
+++ b/css/style.css
@@ -580,7 +580,7 @@ a {
              .service-box {
                 width: 90%;
                 margin-top: 2vmax;
-                margin-bottom: 0;
+                margin-bottom: 0px;
                 margin-left: 1vmax;
              }       
              #our-service h2 {
