--- a/css/style.css
+++ b/css/style.css
@@ -632,8 +632,8 @@ a {
                 font-family: txt-R;
                 margin-bottom: 1vmax ;
             }
-/* 
-            .bottom a {
+
+            /* .bottom a {
                 width: 100%;
                 padding: 1vw 0;
                 text-align: center;
@@ -643,7 +643,7 @@ a {
                 font-size: 1.90vmax;
             } */
              
-            /* .service-box {
+            .service-box {
                 padding: 1vmax 0 3vw 1.5vmax;
             }
             .service-box .details h3 {
@@ -653,15 +653,15 @@ a {
                 font-size: 1.20vmax;
                 font-family: txt-R;
                 margin: 1.85vmax 0;
-            } */
+            }
 
-            /* .service-box .details a {
+            .service-box .details a {
                 padding: 2vw 4vw;
                 border-radius: 20px;
                 font-family: txt-B;
                 font-size: 1.2vmax;
                 color: #000;
-            } */
+            }
             #testimonials h2 {
                 font-size: 3vmax;
                 margin-left: 2vmax;
