--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ a {
     background: #000;
     color: #fff;
     padding: 4vmax 2vmax;
-    padding-bottom: 1.50vmax;
+    padding-bottom: 3vmax;
  }
  #footer-top {
     gap: 2vmax;
@@ -814,9 +814,9 @@ a {
                         font-size: 2.40vmax; }
 
                         #footer-bottom h3 {
-                            font-size: 1.6vmax;
+                            font-size: 1.8vmax;
                             text-transform: uppercase;
-                            font-weight: 500;
+                            font-weight: 600;
                             margin-bottom: 1.80vmax;
                             font-family: MainTxt-R;
                             
@@ -824,11 +824,11 @@ a {
                          #footer-bottom a {
                             color: #fff;
                             margin: .90vmax;
-                            font-weight: 200;
+                            font-weight: 300;
                             text-transform: capitalize;
-                            font-size: .60em;
+                            font-size: .75em;
                             font-family: Txt-R;
-                            display: block;
+                            display: block; }
             
        
          
